# TSP_MPI

./: .gitignore  CMakeLists.txt  README.md  main.c
lib/: CMakeLists.txt  list.c  list.h
